deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test
  labels:
    name: test
---
kind: Service
apiVersion: v1
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels: 
    app: webserver 
spec:
  replicas: 1 
  selector: 
    matchLabels: 
      app: webserver 
  template: 
    metadata: 
      labels: 
        app: webserver 
    spec:
      containers:
      - name: webserver
        image: ${CICD_IMAGE}:prod-${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webserver-ingress
  labels:
    app: webserver 
spec:
  rules:
  - host: xip.io
    http:
      paths:
      - backend:
          serviceName: webserver-service
          servicePort: 80
